Portfolio section deleted. At this point, I am going to create a new index.html as I'm not happy with the current version!

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
 		<div id="home-text">
 			<div>
 				<h1>Jessica Bennett</h1>
-				<br />
+                <blockquote 
+                    cite="https://www.forbes.com/2006/12/10/john-romero-games-tech_cx_de_games06_1212romero.html#57277066866e"><em>
+                    You might not think that programmers are artists, but
+                    programming is an extremely creative profession. <br>It's
+                    logic-based creativity.</em> <br><strong>~ John Romero</strong>
+                </blockquote>
 				<h2>Full Stack Software Developer</h2>
 			</div>
 		</div>
@@ -66,32 +71,34 @@
 				<div class="section-text">
 					<svg width="100%" height="100%" class="svg-about">
 						<line class="show-on-scroll line" id="line-a-xs" x1="50%" y1="0%" x2="50%" y2="5%" />
+                        <text x="25%" y="12%" text-anchor="start"> TEST </text>
 						<circle class="show-on-scroll circle" id="circle-a-xs" cx="50%" cy="12%" r="8%" />
-						<text x="50%" y="12%" text-anchor="middle" fill="#E7E0DA" font-size="40px"
+						<text x="50%" y="12%" text-anchor="middle" fill="#FAF8F7" font-size="40px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#undergrad-modal">
 							&#xf19c;
 						</text>
 						<line class="show-on-scroll line" id="line-b-xs" x1="50%" y1="19%" x2="50%" y2="24%" />
 						<circle class="show-on-scroll circle" id="circle-b-xs" cx="50%" cy="31%" r="8%" />
-						<text x="50%" y="31%" text-anchor="middle" fill="#E7E0DA" font-size="40px"
+                        <text x="75%" y="31%" text-anchor="end"> TEST </text>
+						<text x="50%" y="31%" text-anchor="middle" fill="#FAF8F7" font-size="40px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#teacher-modal">
 							&#xf51c;
 						</text>
 						<line class="show-on-scroll line" id="line-c-xs" x1="50%" y1="38%" x2="50%" y2="43%" />
 						<circle class="show-on-scroll circle" id="circle-c-xs" cx="50%" cy="50%" r="8%" />
-						<text x="50%" y="50%" text-anchor="middle" fill="#E7E0DA" font-size="40px"
+						<text x="50%" y="50%" text-anchor="middle" fill="#FAF8F7" font-size="40px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#masters-modal">
 							&#xf19d;
 						</text>
 						<line class="show-on-scroll line" id="line-d-xs" x1="50%" y1="57%" x2="50%" y2="62%" />
 						<circle class="show-on-scroll circle" id="circle-d-xs" cx="50%" cy="69%" r="8%" />
-						<text x="50%" y="69%" text-anchor="middle" fill="#E7E0DA" font-size="40px"
+						<text x="50%" y="69%" text-anchor="middle" fill="#FAF8F7" font-size="40px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#researcher-modal">
 							&#xf1fe;
 						</text>
 						<line class="show-on-scroll line" id="line-e-xs" x1="50%" y1="76%" x2="50%" y2="81%" />
 						<circle class="show-on-scroll circle" id="circle-e-xs" cx="50%" cy="88%" r="8%" />
-						<text x="50%" y="88%" text-anchor="middle" fill="#E7E0DA" font-size="40px"
+						<text x="50%" y="88%" text-anchor="middle" fill="#FAF8F7" font-size="40px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#developer-modal">
 							&#xf5fc;
 						</text>
@@ -108,7 +115,7 @@
 					<svg width="100%" height="100%" class="svg-about">
 						<line class="show-on-scroll line" id="line-a-md" x1="0%" y1="14%" x2="6%" y2="14%" />
 						<circle class="show-on-scroll circle" id="circle-a-md" cx="10%" cy="14%" r="5%" />
-						<text x="10%" y="14%" text-anchor="middle" fill="#E7E0DA" font-size="50px"
+						<text x="10%" y="14%" text-anchor="middle" fill="#FAF8F7" font-size="50px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#undergrad-modal">
 							&#xf19c;
 						</text>
@@ -116,7 +123,7 @@
 						<line class="show-on-scroll vertical" id="line-c-md" x1="20%" y1="14%" x2="20%" y2="32%" />
 						<line class="show-on-scroll line" id="line-d-md" x1="20%" y1="32%" x2="26%" y2="32%" />
 						<circle class="show-on-scroll circle" id="circle-b-md" cx="30%" cy="32%" r="5%" />
-						<text x="30%" y="32%" text-anchor="middle" fill="#E7E0DA" font-size="50px"
+						<text x="30%" y="32%" text-anchor="middle" fill="#FAF8F7" font-size="50px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#teacher-modal">
 							&#xf51c;
 						</text>
@@ -124,7 +131,7 @@
 						<line class="show-on-scroll vertical" id="line-f-md" x1="40%" y1="32%" x2="40%" y2="50%" />
 						<line class="show-on-scroll line" id="line-g-md" x1="40%" y1="50%" x2="46%" y2="50%" />
 						<circle class="show-on-scroll circle" id="circle-c-md" cx="50%" cy="50%" r="5%" />
-						<text x="50%" y="50%" text-anchor="middle" fill="#E7E0DA" font-size="50px"
+						<text x="50%" y="50%" text-anchor="middle" fill="#FAF8F7" font-size="50px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#masters-modal">
 							&#xf19d;
 						</text>
@@ -132,7 +139,7 @@
 						<line class="show-on-scroll vertical" id="line-i-md" x1="60%" y1="50%" x2="60%" y2="68%" />
 						<line class="show-on-scroll line" id="line-j-md" x1="60%" y1="68%" x2="66%" y2="68%" />
 						<circle class="show-on-scroll circle" id="circle-d-md" cx="70%" cy="68%" r="5%" />
-						<text x="70%" y="68%" text-anchor="middle" fill="#E7E0DA" font-size="50px"
+						<text x="70%" y="68%" text-anchor="middle" fill="#FAF8F7" font-size="50px"
 							font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#researcher-modal">
 							&#xf1fe;
 						</text>
@@ -141,7 +148,7 @@
 						<line class="show-on-scroll line" id="line-m-md" x1="80%" y1="86%" x2="86%" y2="86%" />
 						<circle class="show-on-scroll circle" id="circle-e-md" cx="90%" cy="86%" r="5%" />
 						<a href="#about2-section">
-							<text x="90%" y="86%" text-anchor="middle" fill="#E7E0DA" font-size="50px"
+							<text x="90%" y="86%" text-anchor="middle" fill="#FAF8F7" font-size="50px"
 								font-family="FontAwesome" dy=".3em">
 								&#xf5fc;
 							</text>
@@ -150,6 +157,9 @@
 					</svg>
 				</div>
 			</div>
+        <div class="scroll-hint">
+			<a href="#about2-section"><i class="fas fa-chevron-down"></i></a>
+		</div>
 		</div>
 	</section>
 	<section class="main-color">
@@ -167,7 +177,7 @@
           />
 				<div class="row">
 					<div class="col-12 col-md-6">
-						<blockquote
+						<blockquote class="d-none d-md-block"
 							cite="https://www.forbes.com/2006/12/10/john-romero-games-tech_cx_de_games06_1212romero.html#57277066866e"><em>
 							You might not think that programmers are artists, but
 							programming is an extremely creative profession. It's
@@ -249,35 +259,11 @@
 				<h2>Portfolio</h2>
 			</div>
 			<div class="section-text photos">
-				<div class="row justify-content-center">
-					<div class="col-6 col-md-4 my-auto hover">
-						<div class="portfolio-image"><img src="assets/images/first-website.JPG" alt="jessica bennetts first website"/></div>
-                        <div class="portfolio-popup">First website. <br>Created for entry assessment for Code Institute. <br> <a>Visit</a></div>
-                    </div>
-                    <div class="col-6 col-md-4 my-auto hover">
-                        <div class="portfolio-image"><img src="assets/images/developer-website.JPG" alt="full stack software developer website"/></div>
-                        <div class="portfolio-popup"> INFO BOX</div>
-                    </div>
-                    <div class="col-6 col-md-4 my-auto hover">
-                        <div class="portfolio-image"><img src="assets/images/interactive-frontend.png" alt="Interactive Frontend Development Milestone Project"/></div>
-                        <div class="portfolio-popup"> INFO BOX</div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-					<div class="col-6 col-md-4 my-auto hover">
-						<div class="portfolio-image"><img src="assets/images/data-centric.png" alt="Data Centric Development Milestone Project"/></div>
-                        <div class="portfolio-popup"> INFO BOX</div>
-                    </div>
-                    <div class="col-6 col-md-4 my-auto hover">
-                        <div class="portfolio-image"><img src="assets/images/full-stack.png" alt="Full Stack Frameworks with Django Milestone Project"/></div>
-                        <div class="portfolio-popup"> INFO BOX</div>
-                    </div>
-                </div>
-            </div>
+			</div>	
             <div class="scroll-hint">
                 <a href="#contact-section"><i class="fas fa-chevron-down"></i></a>
             </div>
-    </div>
+        </div>
 	</section>
 	<section class="contact-color">
 		<div id="contact-section">
@@ -285,9 +271,9 @@
 				<h2>Contact</h2>
 			</div>
 		    <div class="section-text row">
-                <div class="col-12  my-auto center-content">
+                <!-- <div class="col-12  my-auto center-content">
                     <img src="assets/images/cartwheel-sq.jpg" alt=""/>
-                </div>
+                </div> -->
                 <div class="col-12  my-auto center-content">
                     <form action="#" method="post" enctype="text/plain">
                         <input type="text" id="name" name="name" placeholder="Name" required><br>
@@ -300,7 +286,18 @@
 		</div>
 	</section>        
 	<footer class="footer-color">
-        About / Download CV / Social/contact
+        <div class="row">
+            <div class="col my-auto center-content">
+                Jessica Bennett - Full Stack Software Developer
+            </div>
+            <div class="col my-auto center-content">
+                <i class="fas fa-download"></i>
+            </div>
+            <div class="col my-auto center-content">
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-github-square"></i>
+            </div>
+        </div>
 	</footer>
 	<!---------------------------------- Menu modal -->
 	<div class="modal" tabindex="-1" role="dialog" id="menu-modal">
@@ -501,9 +498,9 @@
 				<div class="modal-body about-list">
 					<blockquote
 						cite="https://www.forbes.com/2006/12/10/john-romero-games-tech_cx_de_games06_1212romero.html#57277066866e">
-						You might not think that programmers are artists, but programming
-						is an extremely creative profession. It's logic-based creativity.
-						~ John Romero
+						<em>You might not think that programmers are artists, but programming
+						is an extremely creative profession. It's logic-based creativity.</em><br>
+						<strong>~ John Romero</strong>
 					</blockquote>
 					<p>
 						Having recently found this quote, it's been a relief to learn that
