--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
@@ -26,7 +26,7 @@
 							<a href="#about">About</a>
 						</li>
 						<li>
-							<a href="#portfolio-section">Portfolio</a>
+							<a href="#portfolio">Portfolio</a>
 						</li>
 						<li>
 							<a href="#contact-section">Contact</a>
@@ -93,9 +93,9 @@
                     <line class="show-on-scroll delay-4 line" x1="50%" y1="76%" x2="50%" y2="81%" />
                     <circle class="show-on-scroll delay-4-5 circle" cx="50%" cy="88%" r="8%" />
                     <text class="show-on-scroll delay-5 text" x="35%" y="87%" text-anchor="end" fill="#36454f" font-size="15px" font-weight="500"
-                        font-family="Raleway"> SFTDEV </text>
+                        font-family="Raleway"> Software </text>
                     <text class="show-on-scroll delay-5 text" x="35%" y="90%" text-anchor="end" fill="#36454f" font-size="15px" font-weight="500"
-                        font-family="Raleway"> Student </text>    
+                        font-family="Raleway"> developer </text>    
                     <text class="show-on-scroll delay-5 text" x="50%" y="88%" text-anchor="middle" fill="#f1f3f5" font-size="40px"
                         font-family="FontAwesome" dy=".3em" data-toggle="modal" data-target="#developer-modal">
                         &#xf5fc;
@@ -151,7 +151,7 @@
                     <line class="show-on-scroll delay-5 line" x1="80%" y1="86%" x2="86%" y2="86%" />
                     <circle class="show-on-scroll delay-5-25 circle" cx="90%" cy="86%" r="5%" />
                     <text class="show-on-scroll delay-5-5 text" x="90%" y="97%" text-anchor="middle" fill="#36454f" font-size="15px" font-weight="500"
-                        font-family="Raleway"> SFTDEV Student </text>
+                        font-family="Raleway"> Software developer </text>
                     <a href="#skills">
                         <text class="show-on-scroll delay-5-5 text" x="90%" y="86%" text-anchor="middle" fill="#f1f3f5" font-size="50px"
                             font-family="FontAwesome" dy=".3em">
@@ -255,7 +255,60 @@
         </div>
         </section>
     <section id="portfolio">
-    Portfolio
+        <div class="section-title">
+            <h2>Portfolio</h2>
+        </div>
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-6 col-md-4">
+                    <div class="card">
+                        <img scr="assets/images/first-website.JPG" alt="first website"/>
+                        <div class="caption">
+                            <h4>TEST</h4>
+                            <p>TEST PARA</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4">
+                    <div class="card">
+                        <img scr="assets/images/developer-website.JPG" alt="developer website"/>
+                        <div class="caption">
+                            <h4>TEST</h4>
+                            <p>TEST PARA</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4">
+                    <div class="card">
+                        <img scr="assets/images/data-centric.png" alt="data-centric website"/>
+                        <div class="caption">
+                            <h4>TEST</h4>
+                            <p>TEST PARA</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-6 col-md-4">
+                    <div class="card">
+                        <img scr="assets/images/first-website.JPG" alt="first website"/>
+                        <div class="caption">
+                            <h4>TEST</h4>
+                            <p>TEST PARA</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4">
+                    <div class="card">
+                        <img scr="assets/images/developer-website.JPG" alt="developer website"/>
+                        <div class="caption">
+                            <h4>TEST</h4>
+                            <p>TEST PARA</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="contact">
     Contact
@@ -286,7 +339,7 @@
 							<a href="#about" onclick="$('#menu-modal').modal('hide')">About</a>
 						</li>
 						<li>
-							<a href="#portfolio-section" onclick="$('#menu-modal').modal('hide')">Portfolio</a>
+							<a href="#portfolio" onclick="$('#menu-modal').modal('hide')">Portfolio</a>
 						</li>
 						<li>
 							<a href="#contact-section" onclick="$('#menu-modal').modal('hide')">Contact</a>
