Portfolio page completed and card layout issue fixed. Favicon added.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<script src="https://kit.fontawesome.com/372df47477.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
     <title>Jessica Bennett | Full Stack Software Developer</title>
 </head>
 <body>
@@ -260,50 +264,88 @@
         </div>
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-6 col-md-4">
-                    <div class="card">
-                        <img scr="assets/images/first-website.JPG" alt="first website"/>
-                        <div class="caption">
-                            <h4>TEST</h4>
-                            <p>TEST PARA</p>
+                <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/first-website.JPG" alt="first website"/>
+                                <div class="caption">
+                                    <p>More details</p>
+                                </div>
+					        </div>
+                            <div class="flip-card-back">
+                                <p class="d-none d-md-block">I built this site as part of my entry assessment for Code Institute's software development course.
+                                Is it beautiful and well-made? Absolutely not! But it was created with a huge amount of enthusiasm and dedication
+                                (and zero coding knowledge!). So I'm proud to display it, regardless of its many, many faults.</p>
+                                <button><a href="https://llanelli-to-dursley--j355.repl.co/" target="_blank">Visit site</a></button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-4">
-                    <div class="card">
-                        <img scr="assets/images/developer-website.JPG" alt="developer website"/>
-                        <div class="caption">
-                            <h4>TEST</h4>
-                            <p>TEST PARA</p>
+                <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
+                    <div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/developer-website.JPG" alt="developer website"/>
+                                <div class="caption">
+                                    <p>More details</p>
+                                </div>
+					        </div>
+                            <div class="flip-card-back">
+                                <p class="d-none d-md-block">You might recognise this site... Here it is - my first 'proper' website, built with the 
+                                knowledge and skills that I'm currently gaining. Feel free to click to 'visit site', but you might find yourself in an inception-like loop!</p>
+                                <button><a href="#portfolio" target="_blank">Visit site</a></button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-4">
-                    <div class="card">
-                        <img scr="assets/images/data-centric.png" alt="data-centric website"/>
-                        <div class="caption">
-                            <h4>TEST</h4>
-                            <p>TEST PARA</p>
+                <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
+                    <div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/interactive-frontend.png" alt="interactive-frontend website"/>
+                                <div class="caption">
+                                    <p>More details</p>
+                                </div>
+					        </div>
+                            <div class="flip-card-back">
+                                <p class="d-none d-md-block">Coming soon...</p>
+                                <button disabled>Visit site</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-6 col-md-4">
-                    <div class="card">
-                        <img scr="assets/images/first-website.JPG" alt="first website"/>
-                        <div class="caption">
-                            <h4>TEST</h4>
-                            <p>TEST PARA</p>
+                <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/data-centric.png" alt="data-centric website"/>
+                                <div class="caption">
+                                    <p>More details</p>
+                                </div>
+					        </div>
+                            <div class="flip-card-back">
+                                <p class="d-none d-md-block">Coming soon...</p>
+                                <button disabled>Visit site</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-4">
-                    <div class="card">
-                        <img scr="assets/images/developer-website.JPG" alt="developer website"/>
-                        <div class="caption">
-                            <h4>TEST</h4>
-                            <p>TEST PARA</p>
+                <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
+                    <div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/full-stack.png" alt="full-stack website"/>
+                                <div class="caption">
+                                    <p>More details</p>
+                                </div>
+					        </div>
+                            <div class="flip-card-back">
+                                <p class="d-none d-md-block">Coming soon...</p>
+                                <button disabled>Visit site</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -598,9 +640,9 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+	<!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
+	</script> -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
