Contact page and footer completed. About modals updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
-    <title>Jessica Bennett | Full Stack Software Developer</title>
+    <title>Jess Bennett | Full Stack Software Developer</title>
 </head>
 <body>
     <header id="home">
@@ -41,7 +41,7 @@
         </nav>
         <div id="home-text">
 			<div>
-				<h1>Jessica Bennett</h1>
+				<h1>Jess Bennett</h1>
                 <blockquote 
                     cite="https://www.forbes.com/2006/12/10/john-romero-games-tech_cx_de_games06_1212romero.html#57277066866e"><em>
                     You might not think that programmers are artists, but
@@ -170,12 +170,12 @@
     <section id="skills">
         <div class="section-title">
             <div>
-                <h4>Full Stack Software Development Student</h4>
+                <h5>Full Stack Software Development Student</h5>
                 <h5>Present - 2021</h5>
             </div>
         </div>
         <div class="container-fluid">
-            <img src="assets/images/current-sq.jpg" alt="jessica bennett currently"/>
+            <img src="assets/images/current-sq.jpg" alt="Jess bennett currently"/>
             <div class="row">
                 <div class="col-md-6 d-none d-md-block">
 						<blockquote 
@@ -263,13 +263,8 @@
             <h2>Portfolio</h2>
         </div>
         <div class="container-fluid">
-<<<<<<< HEAD
             <div class="row justify-content-center">
                 <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
-=======
-            <div class="row d-flex justify-content-center">
-                <div class="col-6 col-md-4 p-2">
->>>>>>> ec9f60bb80837a05330727773a86601aa4ba339e
 					<div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -287,11 +282,7 @@
                         </div>
                     </div>
                 </div>
-<<<<<<< HEAD
                 <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
-=======
-                <div class="col-6 col-md-4 p-2">
->>>>>>> ec9f60bb80837a05330727773a86601aa4ba339e
                     <div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -308,11 +299,7 @@
                         </div>
                     </div>
                 </div>
-<<<<<<< HEAD
                 <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
-=======
-                <div class="col-6 col-md-4 p-2">
->>>>>>> ec9f60bb80837a05330727773a86601aa4ba339e
                     <div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -329,13 +316,8 @@
                     </div>
                 </div>
             </div>
-<<<<<<< HEAD
             <div class="row justify-content-center">
                 <div class="col-6 col-md-4 p-2 pb-4 d-flex justify-content-center">
-=======
-            <div class="row d-flex justify-content-center">
-                <div class="col-6 col-md-4 p-2">
->>>>>>> ec9f60bb80837a05330727773a86601aa4ba339e
 					<div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -351,11 +333,7 @@
                         </div>
                     </div>
                 </div>
-<<<<<<< HEAD
                 <div class="col-6 col-md-4 p-2 pb-4 d-flex justify-content-center">
-=======
-                <div class="col-6 col-md-4 p-2">
->>>>>>> ec9f60bb80837a05330727773a86601aa4ba339e
                     <div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -381,28 +359,36 @@
         <div class="contact-card">
             <form class="contact-form" method="post" action="#">
                 <div>
-                    <h4>Dear Jess,</h4>
-                    <textarea name="contact-message" placeholder="What would you like to say?" required></textarea>
-                    <div class="contact-details">
-                        <label for="name">from</label>
-                        <input type="text" id="name" name="name" placeholder="Your name" required>
-                        <input type="email" id="email" name="email" placeholder="Your email address" required>
+                    <div class="contact-heading">
+                        <h4>Dear Jess,</h4>
+                        <div class="button-border">
+                            <input class="contact-button" type="submit" value="Send!">
+                        </div>
                     </div>
+                        <textarea name="contact-message" placeholder="What would you like to say?" required></textarea>
+                        <div class="contact-details">
+                            <label for="name">from</label>
+                            <input type="text" id="name" name="name" placeholder="Your name" required>
+                            <input type="email" id="email" name="email" placeholder="Your email address" required>
+                        </div>
                 </div>
             </form>
         </div>
     </section>
-    <footer id="footer" class="container-fluid">
-        <p>Don't fancy sending a message right now?</p>
-        <div class="row">
-            <div class="col">
-                <i class="fas fa-bars"></i>
-            </div>
-            <div class="col">
-                <i class="fas fa-bars"></i>
-            </div>
-            <div class="col">
-                <i class="fas fa-bars"></i>
+    <footer id="footer">
+        <div class="container-fluid">
+            <p>Don't fancy sending a message right now?</p>
+            <p><em>Let's connect!</em></p>
+            <div class="row">
+                <div class="col">
+                    <a href="#" target="_blank"><i class="fas fa-download"></i></a>
+                </div>
+                <div class="col">
+                    <a href="https://github.com/jess-bennett/" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
+                <div class="col">
+                    <a href="https://www.linkedin.com/in/jessica-bennett-33750368/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
         </div>
     </footer>
@@ -411,14 +397,9 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-top">
-					<button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
 				</div>
 				<div class="modal-body">
 					<ul>
@@ -447,30 +428,29 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-top">
-					<button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-					<div class="row">
-						<img src="assets/images/uni-sq.jpg" alt="jessica bennett as an undergraduate"/>
-						<div class="modal-title">
-							<div>
-								<h4>Undergraduate</h4>
-								<br />
-								<h5>2005 - 2009</h5>
-							</div>
-						</div>
-					</div>
-				</div>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <img src="assets/images/uni-sq.jpg" alt="Jess bennett as an undergraduate"/>
+                    <div class="modal-title">
+                        <div>
+                            <h5>Primary School Education Undergraduate Degree</h5>
+                            <br />
+                            <h5>2005 - 2009</h5>
+                        </div>
+                    </div>
+                </div>
 				<div class="modal-body about-list">
-					<h6>Skills aquired:</h6>
+					<h6>Qualification gained:</h6>
+					<dl>
+						<dt>BA(Hons) Primary Education with French with QTS</dt>
+						<dd>2:1</dd>
+					</dl>
+                    <h6>Skills aquired:</h6>
 					<ul>
-						<li>Ability to organise</li>
-						<li>Forward planning</li>
+						<li>Ability to teach</li>
+						<li>Planning</li>
+                        <li>Time management</li>
 					</ul>
 				</div>
 			</div>
@@ -481,30 +461,24 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-top">
-					<button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-					<div class="row">
-						<img src="assets/images/teacher-sq.jpg" alt="jessica bennett as a teacher"/>
-						<div class="modal-title">
-							<div>
-								<h4>Teacher</h4>
-								<br />
-								<h5>2010 - 2012</h5>
-							</div>
-						</div>
-					</div>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+					<img src="assets/images/teacher-sq.jpg" alt="Jess bennett as a teacher"/>
+                    <div class="modal-title">
+                        <div>
+                            <h5>Year 5 Classroom Teacher</h5>
+                            <br />
+                            <h5>2010 - 2012</h5>
+                        </div>
+                    </div>
 				</div>
 				<div class="modal-body about-list">
-					<h6>Skills aquired:</h6>
+                    <h6>Skills aquired:</h6>
 					<ul>
-						<li>Ability to organise</li>
-						<li>Forward planning</li>
+						<li>Strong verbal communication</li>
+						<li>Team work</li>
+                        <li>Checking</li>
 					</ul>
 				</div>
 			</div>
@@ -515,30 +489,29 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-top">
-					<button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-					<div class="row">
-						<img src="assets/images/master-sq.jpg" alt="jessica bennett with dissertation for masters degree"/>
-						<div class="modal-title">
-							<div>
-								<h4>Master's Degree</h4>
-								<br />
-								<h5>2012 - 2013</h5>
-							</div>
-						</div>
-					</div>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+					<img src="assets/images/master-sq.jpg" alt="Jess bennett with dissertation for masters degree"/>
+                    <div class="modal-title">
+                        <div>
+                            <h5>Psychology of Education Master's Degree</h5>
+                            <br />
+                            <h5>2012 - 2013</h5>
+                        </div>
+                    </div>
 				</div>
 				<div class="modal-body about-list">
-					<h6>Skills aquired:</h6>
+					<h6>Qualification gained:</h6>
+					<dl>
+						<dt>MEd Psychology of Education </dt>
+						<dd>Distinction</dd>
+					</dl>
+                    <h6>Skills aquired:</h6>
 					<ul>
-						<li>Ability to organise</li>
-						<li>Forward planning</li>
+						<li>Patience</li>
+						<li>Written communication</li>
+                        <li>Curiosity</li>
 					</ul>
 				</div>
 			</div>
@@ -549,30 +522,24 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-top">
-					<button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-					<div class="row">
-						<img src="assets/images/researcher-sq.jpg" alt="jessica bennett as a data analyst and researcher"/>
-						<div class="modal-title">
-							<div>
-								<h4>Researcher/Data Analyst</h4>
-								<br />
-								<h5>2013 - Present</h5>
-							</div>
-						</div>
-					</div>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+					<img src="assets/images/researcher-sq.jpg" alt="Jess bennett as a data analyst and researcher"/>
+                    <div class="modal-title">
+                        <div>
+                            <h5>Researcher/Data Analyst</h5>
+                            <br />
+                            <h5>2013 - Present</h5>
+                        </div>
+                    </div>
 				</div>
 				<div class="modal-body about-list">
-					<h6>Skills aquired:</h6>
+                    <h6>Skills aquired:</h6>
 					<ul>
-						<li>Ability to organise</li>
-						<li>Forward planning</li>
+						<li>Logical thinking and problem solving</li>
+						<li>Open-mindedness</li>
+                        <li>Attention to detail</li>
 					</ul>
 				</div>
 			</div>
@@ -583,24 +550,17 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-top">
-					<button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-					<div class="row">
-						<img src="assets/images/current-sq.jpg" alt="jessica bennett currently"/>
-						<div class="modal-title">
-							<div>
-								<h4>Full Stack Software Development Student</h4>
-								<br />
-								<h5>Present - 2021</h5>
-							</div>
-						</div>
-					</div>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+					<img src="assets/images/current-sq.jpg" alt="Jess bennett currently"/>
+                    <div class="modal-title">
+                        <div>
+                            <h5>Full Stack Software Development Student</h5>
+                            <br />
+                            <h5>Present - 2021</h5>
+                        </div>
+                    </div>
 				</div>
 				<div class="modal-body about-list">
 					<blockquote
